src/test/ui/rfc-2093-infer-outlives/explicit-union.stderr
error: rustc_outlives
  --> $DIR/explicit-union.rs:6:1
   |
LL | / union Foo<'b, U> {
LL | |     bar: Bar<'b, U>
LL | | }
   | |_^
   |
   = note: U : 'b

error: aborting due to previous error

